--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
     </header>
     <nav>
       {{#if loggedIn}}
+      <a href="/dashboard">dashboard</a>
       <button id="logout" class="btn-no-style">logout</button>
       {{else}}
       <a href="/login">login</a>
